# Focuser

./: AGENTS.md  CLAUDE.md  Cargo.toml  I18N.md  README.md
crates/focuser-cli/src/: main.rs
crates/focuser-common/src/: block.rs  lib.rs  settings.rs
crates/focuser-service/src/: enforcement.rs  service.rs
crates/focuser-ui/: tauri.conf.json
crates/focuser-ui/nsis/: installer-hooks.nsi
crates/focuser-ui/src/: blocker.rs  commands.rs  main.rs
crates/focuser-ui/ui/: app.js  i18n.js  index.html  styles.css
crates/focuser-ui/ui/i18n/: en.json  zh.json
