[workspace]
resolver = "2"
members = [
    "crates/focuser-common",
    "crates/focuser-core",
    "crates/focuser-service",
    "crates/focuser-cli",
    "crates/focuser-native",
    "crates/focuser-ui",
]

[workspace.package]
version = "0.1.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/aadeshrao123/Focuser"
description = "Open-source cross-platform website and application blocker"

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "6"
clap = { version = "4", features = ["derive"] }
regex = "1"
glob-match = "0.2"

# Internal crates
focuser-common = { path = "crates/focuser-common" }
focuser-core = { path = "crates/focuser-core" }
